Update to 1.8 R0.1