@@ -1,42 +1,40 @@
 package net.minecraft.server;
 
 // CraftBukkit start
-import org.bukkit.craftbukkit.entity.CraftEntity;
-import org.bukkit.craftbukkit.event.CraftEventFactory;
-import org.bukkit.event.entity.EntityTargetEvent;
 import org.bukkit.event.entity.SlimeSplitEvent;
 // CraftBukkit end
 
 public class EntitySlime extends EntityInsentient implements IMonster {
 
-    public float h;
-    public float i;
-    public float bm;
-    private int jumpDelay;
-    private Entity lastTarget; // CraftBukkit
+    public float a;
+    public float b;
+    public float c;
+    private boolean bi;
 
     public EntitySlime(World world) {
         super(world);
-        int i = 1 << this.random.nextInt(3);
-
-        this.height = 0.0F;
-        this.jumpDelay = this.random.nextInt(20) + 10;
-        this.setSize(i);
+        this.moveController = new ControllerMoveSlime(this);
+        this.goalSelector.a(1, new PathfinderGoalSlimeRandomJump(this));
+        this.goalSelector.a(2, new PathfinderGoalSlimeNearestPlayer(this));
+        this.goalSelector.a(3, new PathfinderGoalSlimeRandomDirection(this));
+        this.goalSelector.a(5, new PathfinderGoalSlimeIdle(this));
+        this.targetSelector.a(1, new PathfinderGoalTargetNearestPlayer(this));
+        this.targetSelector.a(3, new PathfinderGoalNearestAttackableTargetInsentient(this, EntityIronGolem.class));
     }
 
-    protected void c() {
-        super.c();
-        this.datawatcher.a(16, new Byte((byte) 1));
+    protected void h() {
+        super.h();
+        this.datawatcher.a(16, Byte.valueOf((byte) 1));
     }
 
-    // CraftBukkit - protected -> public
     public void setSize(int i) {
-        this.datawatcher.watch(16, new Byte((byte) i));
-        this.a(0.6F * (float) i, 0.6F * (float) i);
+        this.datawatcher.watch(16, Byte.valueOf((byte) i));
+        this.a(0.51000005F * (float) i, 0.51000005F * (float) i);
         this.setPosition(this.locX, this.locY, this.locZ);
         this.getAttributeInstance(GenericAttributes.maxHealth).setValue((double) (i * i));
+        this.getAttributeInstance(GenericAttributes.d).setValue((double) (0.2F + 0.1F * (float) i));
         this.setHealth(this.getMaxHealth());
-        this.b = i;
+        this.b_ = i;
     }
 
     public int getSize() {
@@ -46,6 +44,7 @@ public class EntitySlime extends EntityInsentient implements IMonster {
     public void b(NBTTagCompound nbttagcompound) {
         super.b(nbttagcompound);
         nbttagcompound.setInt("Size", this.getSize() - 1);
+        nbttagcompound.setBoolean("wasOnGround", this.bi);
     }
 
     public void a(NBTTagCompound nbttagcompound) {
@@ -57,110 +56,79 @@ public class EntitySlime extends EntityInsentient implements IMonster {
         }
 
         this.setSize(i + 1);
+        this.bi = nbttagcompound.getBoolean("wasOnGround");
     }
 
-    protected String bP() {
-        return "slime";
+    protected EnumParticle n() {
+        return EnumParticle.SLIME;
     }
 
-    protected String bV() {
+    protected String ci() {
         return "mob.slime." + (this.getSize() > 1 ? "big" : "small");
     }
 
-    public void h() {
-        if (!this.world.isStatic && this.world.difficulty == EnumDifficulty.PEACEFUL && this.getSize() > 0) {
+    public void s_() {
+        if (!this.world.isStatic && this.world.getDifficulty() == EnumDifficulty.PEACEFUL && this.getSize() > 0) {
             this.dead = true;
         }
 
-        this.i += (this.h - this.i) * 0.5F;
-        this.bm = this.i;
-        boolean flag = this.onGround;
-
-        super.h();
-        int i;
-
-        if (this.onGround && !flag) {
-            i = this.getSize();
+        this.b += (this.a - this.b) * 0.5F;
+        this.c = this.b;
+        super.s_();
+        if (this.onGround && !this.bi) {
+            int i = this.getSize();
 
             for (int j = 0; j < i * 8; ++j) {
                 float f = this.random.nextFloat() * 3.1415927F * 2.0F;
                 float f1 = this.random.nextFloat() * 0.5F + 0.5F;
                 float f2 = MathHelper.sin(f) * (float) i * 0.5F * f1;
                 float f3 = MathHelper.cos(f) * (float) i * 0.5F * f1;
+                World world = this.world;
+                EnumParticle enumparticle = this.n();
+                double d0 = this.locX + (double) f2;
+                double d1 = this.locZ + (double) f3;
 
-                this.world.addParticle(this.bP(), this.locX + (double) f2, this.boundingBox.b, this.locZ + (double) f3, 0.0D, 0.0D, 0.0D);
+                world.addParticle(enumparticle, d0, this.getBoundingBox().b, d1, 0.0D, 0.0D, 0.0D, new int[0]);
             }
 
-            if (this.bW()) {
-                this.makeSound(this.bV(), this.bf(), ((this.random.nextFloat() - this.random.nextFloat()) * 0.2F + 1.0F) / 0.8F);
+            if (this.cj()) {
+                this.makeSound(this.ci(), this.bA(), ((this.random.nextFloat() - this.random.nextFloat()) * 0.2F + 1.0F) / 0.8F);
             }
 
-            this.h = -0.5F;
-        } else if (!this.onGround && flag) {
-            this.h = 1.0F;
+            this.a = -0.5F;
+        } else if (!this.onGround && this.bi) {
+            this.a = 1.0F;
         }
 
-        this.bS();
-        if (this.world.isStatic) {
-            i = this.getSize();
-            this.a(0.6F * (float) i, 0.6F * (float) i);
-        }
+        this.bi = this.onGround;
+        this.cf();
     }
 
-    protected void bq() {
-        this.w();
-        // CraftBukkit start
-        Entity entityhuman = this.world.findNearbyVulnerablePlayer(this, 16.0D); // EntityHuman -> Entity
-        EntityTargetEvent event = null;
-
-        if (entityhuman != null && !entityhuman.equals(lastTarget)) {
-            event = CraftEventFactory.callEntityTargetEvent(this, entityhuman, EntityTargetEvent.TargetReason.CLOSEST_PLAYER);
-        } else if (lastTarget != null && entityhuman == null) {
-            event = CraftEventFactory.callEntityTargetEvent(this, entityhuman, EntityTargetEvent.TargetReason.FORGOT_TARGET);
-        }
-
-        if (event != null && !event.isCancelled()) {
-            entityhuman = event.getTarget() == null ? null : ((CraftEntity) event.getTarget()).getHandle();
-        }
-
-        this.lastTarget = entityhuman;
-        // CraftBukkit end
-
-        if (entityhuman != null) {
-            this.a(entityhuman, 10.0F, 20.0F);
-        }
-
-        if (this.onGround && this.jumpDelay-- <= 0) {
-            this.jumpDelay = this.bR();
-            if (entityhuman != null) {
-                this.jumpDelay /= 3;
-            }
-
-            this.bc = true;
-            if (this.bY()) {
-                this.makeSound(this.bV(), this.bf(), ((this.random.nextFloat() - this.random.nextFloat()) * 0.2F + 1.0F) * 0.8F);
-            }
-
-            this.bd = 1.0F - this.random.nextFloat() * 2.0F;
-            this.be = (float) (1 * this.getSize());
-        } else {
-            this.bc = false;
-            if (this.onGround) {
-                this.bd = this.be = 0.0F;
-            }
-        }
+    protected void cf() {
+        this.a *= 0.6F;
     }
 
-    protected void bS() {
-        this.h *= 0.6F;
-    }
-
-    protected int bR() {
+    protected int ce() {
         return this.random.nextInt(20) + 10;
     }
 
-    protected EntitySlime bQ() {
+    protected EntitySlime cd() {
         return new EntitySlime(this.world);
+    }
+
+    public void i(int i) {
+        if (i == 16) {
+            int j = this.getSize();
+
+            this.a(0.51000005F * (float) j, 0.51000005F * (float) j);
+            this.yaw = this.aI;
+            this.aG = this.aI;
+            if (this.V() && this.random.nextInt(20) == 0) {
+                this.X();
+            }
+        }
+
+        super.i(i);
     }
 
     public void die() {
@@ -168,7 +136,7 @@ public class EntitySlime extends EntityInsentient implements IMonster {
 
         if (!this.world.isStatic && i > 1 && this.getHealth() <= 0.0F) {
             int j = 2 + this.random.nextInt(3);
-
+ 
             // CraftBukkit start
             SlimeSplitEvent event = new SlimeSplitEvent((org.bukkit.entity.Slime) this.getBukkitEntity(), j);
             this.world.getServer().getPluginManager().callEvent(event);
@@ -184,7 +152,15 @@ public class EntitySlime extends EntityInsentient implements IMonster {
             for (int k = 0; k < j; ++k) {
                 float f = ((float) (k % 2) - 0.5F) * (float) i / 4.0F;
                 float f1 = ((float) (k / 2) - 0.5F) * (float) i / 4.0F;
-                EntitySlime entityslime = this.bQ();
+                EntitySlime entityslime = this.cd();
+
+                if (this.hasCustomName()) {
+                    entityslime.setCustomName(this.getCustomName());
+                }
+
+                if (this.isPersistent()) {
+                    entityslime.bW();
+                }
 
                 entityslime.setSize(i / 2);
                 entityslime.setPositionRotation(this.locX + (double) f, this.locY + 0.5D, this.locZ + (double) f1, this.random.nextFloat() * 360.0F, 0.0F);
@@ -195,51 +171,70 @@ public class EntitySlime extends EntityInsentient implements IMonster {
         super.die();
     }
 
-    public void b_(EntityHuman entityhuman) {
-        if (this.bT()) {
-            int i = this.getSize();
-
-            if (this.hasLineOfSight(entityhuman) && this.f(entityhuman) < 0.6D * (double) i * 0.6D * (double) i && entityhuman.damageEntity(DamageSource.mobAttack(this), (float) this.bU())) {
-                this.makeSound("mob.attack", 1.0F, (this.random.nextFloat() - this.random.nextFloat()) * 0.2F + 1.0F);
-            }
+    public void collide(Entity entity) {
+        super.collide(entity);
+        if (entity instanceof EntityIronGolem && this.cg()) {
+            this.e((EntityLiving) entity);
         }
+
     }
 
-    protected boolean bT() {
+    public void d(EntityHuman entityhuman) {
+        if (this.cg()) {
+            this.e((EntityLiving) entityhuman);
+        }
+
+    }
+
+    protected void e(EntityLiving entityliving) {
+        int i = this.getSize();
+
+        if (this.hasLineOfSight(entityliving) && this.h(entityliving) < 0.6D * (double) i * 0.6D * (double) i && entityliving.damageEntity(DamageSource.mobAttack(this), (float) this.ch())) {
+            this.makeSound("mob.attack", 1.0F, (this.random.nextFloat() - this.random.nextFloat()) * 0.2F + 1.0F);
+            this.a((EntityLiving) this, (Entity) entityliving);
+        }
+
+    }
+
+    public float getHeadHeight() {
+        return 0.625F * this.length;
+    }
+
+    protected boolean cg() {
         return this.getSize() > 1;
     }
 
-    protected int bU() {
+    protected int ch() {
         return this.getSize();
     }
 
-    protected String aT() {
+    protected String bn() {
         return "mob.slime." + (this.getSize() > 1 ? "big" : "small");
     }
 
-    protected String aU() {
+    protected String bo() {
         return "mob.slime." + (this.getSize() > 1 ? "big" : "small");
     }
 
     protected Item getLoot() {
-        return this.getSize() == 1 ? Items.SLIME_BALL : Item.getById(0);
+        return this.getSize() == 1 ? Items.SLIME : null;
     }
 
-    public boolean canSpawn() {
-        Chunk chunk = this.world.getChunkAtWorldCoords(MathHelper.floor(this.locX), MathHelper.floor(this.locZ));
+    public boolean bQ() {
+        Chunk chunk = this.world.getChunkAtWorldCoords(new BlockPosition(MathHelper.floor(this.locX), 0, MathHelper.floor(this.locZ)));
 
         if (this.world.getWorldData().getType() == WorldType.FLAT && this.random.nextInt(4) != 1) {
             return false;
         } else {
-            if (this.getSize() == 1 || this.world.difficulty != EnumDifficulty.PEACEFUL) {
-                BiomeBase biomebase = this.world.getBiome(MathHelper.floor(this.locX), MathHelper.floor(this.locZ));
+            if (this.world.getDifficulty() != EnumDifficulty.PEACEFUL) {
+                BiomeBase biomebase = this.world.getBiome(new BlockPosition(MathHelper.floor(this.locX), 0, MathHelper.floor(this.locZ)));
 
-                if (biomebase == BiomeBase.SWAMPLAND && this.locY > 50.0D && this.locY < 70.0D && this.random.nextFloat() < 0.5F && this.random.nextFloat() < this.world.y() && this.world.getLightLevel(MathHelper.floor(this.locX), MathHelper.floor(this.locY), MathHelper.floor(this.locZ)) <= this.random.nextInt(8)) {
-                    return super.canSpawn();
+                if (biomebase == BiomeBase.SWAMPLAND && this.locY > 50.0D && this.locY < 70.0D && this.random.nextFloat() < 0.5F && this.random.nextFloat() < this.world.y() && this.world.getLightLevel(new BlockPosition(this)) <= this.random.nextInt(8)) {
+                    return super.bQ();
                 }
 
                 if (this.random.nextInt(10) == 0 && chunk.a(987234911L).nextInt(10) == 0 && this.locY < 40.0D) {
-                    return super.canSpawn();
+                    return super.bQ();
                 }
             }
 
@@ -247,19 +242,37 @@ public class EntitySlime extends EntityInsentient implements IMonster {
         }
     }
 
-    protected float bf() {
+    protected float bA() {
         return 0.4F * (float) this.getSize();
     }
 
-    public int x() {
+    public int bP() {
         return 0;
     }
 
-    protected boolean bY() {
+    protected boolean cl() {
         return this.getSize() > 0;
     }
 
-    protected boolean bW() {
+    protected boolean cj() {
         return this.getSize() > 2;
+    }
+
+    protected void bE() {
+        this.motY = 0.41999998688697815D;
+        this.ai = true;
+    }
+
+    public GroupDataEntity prepare(DifficultyDamageScaler difficultydamagescaler, GroupDataEntity groupdataentity) {
+        int i = this.random.nextInt(3);
+
+        if (i < 2 && this.random.nextFloat() < 0.5F * difficultydamagescaler.c()) {
+            ++i;
+        }
+
+        int j = 1 << i;
+
+        this.setSize(j);
+        return super.prepare(difficultydamagescaler, groupdataentity);
     }
 }
